// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getBeltProps > should match snap 1`] = `
{
  "belt": {
    "borderColor": "#434244",
    "color1": "#FFFFFF",
    "color2": "#000000",
    "color3": "#00FF00",
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": 0,
    "maxStripes": 10,
    "minStripes": 0,
    "name": "belt",
    "patchBorderColor": "",
    "patchColor": "#000000",
    "professorBorderColor": "",
    "professorPatchColor": "",
    "sortOrder": 0,
    "stripeColor": "",
    "stripeCount": 0,
    "stripePosition": "Right",
    "system": "none",
    "type": "Solid",
  },
  "borderColor": "#434244",
  "callback": undefined,
  "elementId": "",
  "hasPatch": true,
  "hasProfessorPatch": false,
  "patchBorder": "",
  "patchColor": "#000000",
  "professorBorder": "",
  "professorPatch": "",
  "randomSettings": {
    "hasPatch": undefined,
    "hasProfessorPatch": undefined,
    "includeBelts": undefined,
    "stripeCount": undefined,
    "stripePosition": undefined,
  },
  "refreshInterval": 0,
  "s10l1Color": "#FFFFFF",
  "s10l2aColor": "#FFFFFF",
  "s10l2bColor": "#FFFFFF",
  "s10l3Color": "#FFFFFF",
  "s11l1Color": "#FFFFFF",
  "s11l2aColor": "#FFFFFF",
  "s11l2bColor": "#FFFFFF",
  "s11l3Color": "#FFFFFF",
  "s12l1Color": "#FFFFFF",
  "s12l2aColor": "#FFFFFF",
  "s12l2bColor": "#FFFFFF",
  "s12l3Color": "#FFFFFF",
  "s13l1Color": "#FFFFFF",
  "s13l2aColor": "#FFFFFF",
  "s13l2bColor": "#FFFFFF",
  "s13l3Color": "#FFFFFF",
  "s1l1Color": "#FFFFFF",
  "s1l2aColor": "#FFFFFF",
  "s1l2bColor": "#FFFFFF",
  "s1l3Color": "#FFFFFF",
  "s2l1Color": "#FFFFFF",
  "s2l2aColor": "#FFFFFF",
  "s2l2bColor": "#FFFFFF",
  "s2l3Color": "#FFFFFF",
  "s3l1Color": "#FFFFFF",
  "s3l2aColor": "#FFFFFF",
  "s3l2bColor": "#FFFFFF",
  "s3l3Color": "#FFFFFF",
  "s4l1Color": "#FFFFFF",
  "s4l2aColor": "#FFFFFF",
  "s4l2bColor": "#FFFFFF",
  "s4l3Color": "#FFFFFF",
  "s5l1Color": "#FFFFFF",
  "s5l2aColor": "#FFFFFF",
  "s5l2bColor": "#FFFFFF",
  "s5l3Color": "#FFFFFF",
  "s6l1Color": "#FFFFFF",
  "s6l2aColor": "#FFFFFF",
  "s6l2bColor": "#FFFFFF",
  "s6l3Color": "#FFFFFF",
  "s7l1Color": "#FFFFFF",
  "s7l2aColor": "#FFFFFF",
  "s7l2bColor": "#FFFFFF",
  "s7l3Color": "#FFFFFF",
  "s8l1Color": "#FFFFFF",
  "s8l2aColor": "#FFFFFF",
  "s8l2bColor": "#FFFFFF",
  "s8l3Color": "#FFFFFF",
  "s9l1Color": "#FFFFFF",
  "s9l2aColor": "#FFFFFF",
  "s9l2bColor": "#FFFFFF",
  "s9l3Color": "#FFFFFF",
  "stripeColor1": "",
  "stripeColor10": "",
  "stripeColor2": "",
  "stripeColor3": "",
  "stripeColor4": "",
  "stripeColor5": "",
  "stripeColor6": "",
  "stripeColor7": "",
  "stripeColor8": "",
  "stripeColor9": "",
  "stripeCount": 0,
  "stripePosition": "Right",
  "transitionCSS": "",
  "version": "",
}
`;

exports[`getBeltPropsCheckered > should match snap 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#FFFFFF",
      "color2": "#000000",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 0,
      "maxStripes": 10,
      "minStripes": 0,
      "name": "checkered",
      "patchBorderColor": "",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 0,
      "stripeColor": "",
      "stripeCount": 0,
      "stripePosition": "Right",
      "system": "none",
      "type": "Checkered",
    },
    "borderColor": "#434244",
    "callback": undefined,
    "elementId": "",
    "hasPatch": true,
    "hasProfessorPatch": false,
    "patchBorder": "",
    "patchColor": "#000000",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1Color": "#000000",
    "s10l2aColor": "#FFFFFF",
    "s10l2bColor": "#FFFFFF",
    "s10l3Color": "#000000",
    "s11l1Color": "#FFFFFF",
    "s11l2aColor": "#000000",
    "s11l2bColor": "#000000",
    "s11l3Color": "#FFFFFF",
    "s12l1Color": "#000000",
    "s12l2aColor": "#FFFFFF",
    "s12l2bColor": "#FFFFFF",
    "s12l3Color": "#000000",
    "s13l1Color": "#FFFFFF",
    "s13l2aColor": "#000000",
    "s13l2bColor": "#000000",
    "s13l3Color": "#FFFFFF",
    "s1l1Color": "#FFFFFF",
    "s1l2aColor": "#000000",
    "s1l2bColor": "#000000",
    "s1l3Color": "#FFFFFF",
    "s2l1Color": "#000000",
    "s2l2aColor": "#FFFFFF",
    "s2l2bColor": "#FFFFFF",
    "s2l3Color": "#000000",
    "s3l1Color": "#FFFFFF",
    "s3l2aColor": "#000000",
    "s3l2bColor": "#000000",
    "s3l3Color": "#FFFFFF",
    "s4l1Color": "#000000",
    "s4l2aColor": "#FFFFFF",
    "s4l2bColor": "#FFFFFF",
    "s4l3Color": "#000000",
    "s5l1Color": "#000000",
    "s5l2aColor": "#FFFFFF",
    "s5l2bColor": "#FFFFFF",
    "s5l3Color": "#000000",
    "s6l1Color": "#FFFFFF",
    "s6l2aColor": "#000000",
    "s6l2bColor": "#000000",
    "s6l3Color": "#FFFFFF",
    "s7l1Color": "#FFFFFF",
    "s7l2aColor": "#000000",
    "s7l2bColor": "#000000",
    "s7l3Color": "#FFFFFF",
    "s8l1Color": "#FFFFFF",
    "s8l2aColor": "#000000",
    "s8l2bColor": "#000000",
    "s8l3Color": "#FFFFFF",
    "s9l1Color": "#000000",
    "s9l2aColor": "#FFFFFF",
    "s9l2bColor": "#FFFFFF",
    "s9l3Color": "#000000",
    "stripeColor1": "",
    "stripeColor10": "",
    "stripeColor2": "",
    "stripeColor3": "",
    "stripeColor4": "",
    "stripeColor5": "",
    "stripeColor6": "",
    "stripeColor7": "",
    "stripeColor8": "",
    "stripeColor9": "",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
]
`;

exports[`getBeltPropsCoral > should match snap 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#FFFFFF",
      "color2": "#000000",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 0,
      "maxStripes": 10,
      "minStripes": 0,
      "name": "coral",
      "patchBorderColor": "",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 0,
      "stripeColor": "",
      "stripeCount": 0,
      "stripePosition": "Right",
      "system": "none",
      "type": "Coral",
    },
    "borderColor": "#434244",
    "callback": undefined,
    "elementId": "",
    "hasPatch": true,
    "hasProfessorPatch": false,
    "patchBorder": "",
    "patchColor": "#000000",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1Color": "#000000",
    "s10l2aColor": "#000000",
    "s10l2bColor": "#000000",
    "s10l3Color": "#000000",
    "s11l1Color": "#FFFFFF",
    "s11l2aColor": "#FFFFFF",
    "s11l2bColor": "#FFFFFF",
    "s11l3Color": "#FFFFFF",
    "s12l1Color": "#000000",
    "s12l2aColor": "#000000",
    "s12l2bColor": "#000000",
    "s12l3Color": "#000000",
    "s13l1Color": "#FFFFFF",
    "s13l2aColor": "#FFFFFF",
    "s13l2bColor": "#FFFFFF",
    "s13l3Color": "#FFFFFF",
    "s1l1Color": "#000000",
    "s1l2aColor": "#000000",
    "s1l2bColor": "#000000",
    "s1l3Color": "#000000",
    "s2l1Color": "#FFFFFF",
    "s2l2aColor": "#FFFFFF",
    "s2l2bColor": "#FFFFFF",
    "s2l3Color": "#FFFFFF",
    "s3l1Color": "#FFFFFF",
    "s3l2aColor": "#FFFFFF",
    "s3l2bColor": "#FFFFFF",
    "s3l3Color": "#FFFFFF",
    "s4l1Color": "#000000",
    "s4l2aColor": "#000000",
    "s4l2bColor": "#000000",
    "s4l3Color": "#000000",
    "s5l1Color": "#000000",
    "s5l2aColor": "#000000",
    "s5l2bColor": "#000000",
    "s5l3Color": "#000000",
    "s6l1Color": "#FFFFFF",
    "s6l2aColor": "#FFFFFF",
    "s6l2bColor": "#FFFFFF",
    "s6l3Color": "#FFFFFF",
    "s7l1Color": "#FFFFFF",
    "s7l2aColor": "#FFFFFF",
    "s7l2bColor": "#FFFFFF",
    "s7l3Color": "#FFFFFF",
    "s8l1Color": "#FFFFFF",
    "s8l2aColor": "#FFFFFF",
    "s8l2bColor": "#FFFFFF",
    "s8l3Color": "#FFFFFF",
    "s9l1Color": "#000000",
    "s9l2aColor": "#000000",
    "s9l2bColor": "#000000",
    "s9l3Color": "#000000",
    "stripeColor1": "",
    "stripeColor10": "",
    "stripeColor2": "",
    "stripeColor3": "",
    "stripeColor4": "",
    "stripeColor5": "",
    "stripeColor6": "",
    "stripeColor7": "",
    "stripeColor8": "",
    "stripeColor9": "",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
]
`;

exports[`getBeltPropsFromBelt > should match snap 1`] = `
{
  "belt": {
    "borderColor": "",
    "color1": "#FF0000",
    "color2": "",
    "color3": "",
    "hasPatch": false,
    "hasProfessorPatch": false,
    "id": 0,
    "maxStripes": 10,
    "minStripes": 0,
    "name": "",
    "patchBorderColor": "",
    "patchColor": "",
    "professorBorderColor": "",
    "professorPatchColor": "",
    "sortOrder": 0,
    "stripeColor": "",
    "stripeCount": 0,
    "stripePosition": "Right",
    "system": "none",
    "type": "Solid",
  },
  "borderColor": "",
  "callback": undefined,
  "elementId": "",
  "hasPatch": false,
  "hasProfessorPatch": false,
  "patchBorder": "",
  "patchColor": "",
  "professorBorder": "",
  "professorPatch": "",
  "randomSettings": {
    "hasPatch": undefined,
    "hasProfessorPatch": undefined,
    "includeBelts": undefined,
    "stripeCount": undefined,
    "stripePosition": undefined,
  },
  "refreshInterval": 0,
  "s10l1Color": "#FF0000",
  "s10l2aColor": "#FF0000",
  "s10l2bColor": "#FF0000",
  "s10l3Color": "#FF0000",
  "s11l1Color": "#FF0000",
  "s11l2aColor": "#FF0000",
  "s11l2bColor": "#FF0000",
  "s11l3Color": "#FF0000",
  "s12l1Color": "#FF0000",
  "s12l2aColor": "#FF0000",
  "s12l2bColor": "#FF0000",
  "s12l3Color": "#FF0000",
  "s13l1Color": "#FF0000",
  "s13l2aColor": "#FF0000",
  "s13l2bColor": "#FF0000",
  "s13l3Color": "#FF0000",
  "s1l1Color": "#FF0000",
  "s1l2aColor": "#FF0000",
  "s1l2bColor": "#FF0000",
  "s1l3Color": "#FF0000",
  "s2l1Color": "#FF0000",
  "s2l2aColor": "#FF0000",
  "s2l2bColor": "#FF0000",
  "s2l3Color": "#FF0000",
  "s3l1Color": "#FF0000",
  "s3l2aColor": "#FF0000",
  "s3l2bColor": "#FF0000",
  "s3l3Color": "#FF0000",
  "s4l1Color": "#FF0000",
  "s4l2aColor": "#FF0000",
  "s4l2bColor": "#FF0000",
  "s4l3Color": "#FF0000",
  "s5l1Color": "#FF0000",
  "s5l2aColor": "#FF0000",
  "s5l2bColor": "#FF0000",
  "s5l3Color": "#FF0000",
  "s6l1Color": "#FF0000",
  "s6l2aColor": "#FF0000",
  "s6l2bColor": "#FF0000",
  "s6l3Color": "#FF0000",
  "s7l1Color": "#FF0000",
  "s7l2aColor": "#FF0000",
  "s7l2bColor": "#FF0000",
  "s7l3Color": "#FF0000",
  "s8l1Color": "#FF0000",
  "s8l2aColor": "#FF0000",
  "s8l2bColor": "#FF0000",
  "s8l3Color": "#FF0000",
  "s9l1Color": "#FF0000",
  "s9l2aColor": "#FF0000",
  "s9l2bColor": "#FF0000",
  "s9l3Color": "#FF0000",
  "stripeColor1": "",
  "stripeColor10": "",
  "stripeColor2": "",
  "stripeColor3": "",
  "stripeColor4": "",
  "stripeColor5": "",
  "stripeColor6": "",
  "stripeColor7": "",
  "stripeColor8": "",
  "stripeColor9": "",
  "stripeCount": 0,
  "stripePosition": "Left",
  "transitionCSS": "",
  "version": "",
}
`;

exports[`getBeltPropsSolid > should match snap 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#FFFFFF",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 0,
      "maxStripes": 10,
      "minStripes": 0,
      "name": "solid",
      "patchBorderColor": "",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 0,
      "stripeColor": "",
      "stripeCount": 0,
      "stripePosition": "Right",
      "system": "none",
      "type": "Solid",
    },
    "borderColor": "#434244",
    "callback": undefined,
    "elementId": "",
    "hasPatch": true,
    "hasProfessorPatch": false,
    "patchBorder": "",
    "patchColor": "#000000",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1Color": "#FFFFFF",
    "s10l2aColor": "#FFFFFF",
    "s10l2bColor": "#FFFFFF",
    "s10l3Color": "#FFFFFF",
    "s11l1Color": "#FFFFFF",
    "s11l2aColor": "#FFFFFF",
    "s11l2bColor": "#FFFFFF",
    "s11l3Color": "#FFFFFF",
    "s12l1Color": "#FFFFFF",
    "s12l2aColor": "#FFFFFF",
    "s12l2bColor": "#FFFFFF",
    "s12l3Color": "#FFFFFF",
    "s13l1Color": "#FFFFFF",
    "s13l2aColor": "#FFFFFF",
    "s13l2bColor": "#FFFFFF",
    "s13l3Color": "#FFFFFF",
    "s1l1Color": "#FFFFFF",
    "s1l2aColor": "#FFFFFF",
    "s1l2bColor": "#FFFFFF",
    "s1l3Color": "#FFFFFF",
    "s2l1Color": "#FFFFFF",
    "s2l2aColor": "#FFFFFF",
    "s2l2bColor": "#FFFFFF",
    "s2l3Color": "#FFFFFF",
    "s3l1Color": "#FFFFFF",
    "s3l2aColor": "#FFFFFF",
    "s3l2bColor": "#FFFFFF",
    "s3l3Color": "#FFFFFF",
    "s4l1Color": "#FFFFFF",
    "s4l2aColor": "#FFFFFF",
    "s4l2bColor": "#FFFFFF",
    "s4l3Color": "#FFFFFF",
    "s5l1Color": "#FFFFFF",
    "s5l2aColor": "#FFFFFF",
    "s5l2bColor": "#FFFFFF",
    "s5l3Color": "#FFFFFF",
    "s6l1Color": "#FFFFFF",
    "s6l2aColor": "#FFFFFF",
    "s6l2bColor": "#FFFFFF",
    "s6l3Color": "#FFFFFF",
    "s7l1Color": "#FFFFFF",
    "s7l2aColor": "#FFFFFF",
    "s7l2bColor": "#FFFFFF",
    "s7l3Color": "#FFFFFF",
    "s8l1Color": "#FFFFFF",
    "s8l2aColor": "#FFFFFF",
    "s8l2bColor": "#FFFFFF",
    "s8l3Color": "#FFFFFF",
    "s9l1Color": "#FFFFFF",
    "s9l2aColor": "#FFFFFF",
    "s9l2bColor": "#FFFFFF",
    "s9l3Color": "#FFFFFF",
    "stripeColor1": "",
    "stripeColor10": "",
    "stripeColor2": "",
    "stripeColor3": "",
    "stripeColor4": "",
    "stripeColor5": "",
    "stripeColor6": "",
    "stripeColor7": "",
    "stripeColor8": "",
    "stripeColor9": "",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
]
`;

exports[`getBeltPropsSplit > should match snap 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#FFFFFF",
      "color2": "#000000",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 0,
      "maxStripes": 10,
      "minStripes": 0,
      "name": "solid",
      "patchBorderColor": "",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 0,
      "stripeColor": "",
      "stripeCount": 0,
      "stripePosition": "Right",
      "system": "none",
      "type": "Split",
    },
    "borderColor": "#434244",
    "callback": undefined,
    "elementId": "",
    "hasPatch": true,
    "hasProfessorPatch": false,
    "patchBorder": "",
    "patchColor": "#000000",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1Color": "#FFFFFF",
    "s10l2aColor": "#FFFFFF",
    "s10l2bColor": "#000000",
    "s10l3Color": "#000000",
    "s11l1Color": "#FFFFFF",
    "s11l2aColor": "#FFFFFF",
    "s11l2bColor": "#000000",
    "s11l3Color": "#000000",
    "s12l1Color": "#FFFFFF",
    "s12l2aColor": "#FFFFFF",
    "s12l2bColor": "#000000",
    "s12l3Color": "#000000",
    "s13l1Color": "#FFFFFF",
    "s13l2aColor": "#FFFFFF",
    "s13l2bColor": "#000000",
    "s13l3Color": "#000000",
    "s1l1Color": "#FFFFFF",
    "s1l2aColor": "#FFFFFF",
    "s1l2bColor": "#000000",
    "s1l3Color": "#000000",
    "s2l1Color": "#FFFFFF",
    "s2l2aColor": "#FFFFFF",
    "s2l2bColor": "#000000",
    "s2l3Color": "#000000",
    "s3l1Color": "#FFFFFF",
    "s3l2aColor": "#FFFFFF",
    "s3l2bColor": "#000000",
    "s3l3Color": "#000000",
    "s4l1Color": "#FFFFFF",
    "s4l2aColor": "#FFFFFF",
    "s4l2bColor": "#000000",
    "s4l3Color": "#000000",
    "s5l1Color": "#FFFFFF",
    "s5l2aColor": "#000000",
    "s5l2bColor": "#FFFFFF",
    "s5l3Color": "#000000",
    "s6l1Color": "#FFFFFF",
    "s6l2aColor": "#000000",
    "s6l2bColor": "#FFFFFF",
    "s6l3Color": "#000000",
    "s7l1Color": "#FFFFFF",
    "s7l2aColor": "#FFFFFF",
    "s7l2bColor": "#000000",
    "s7l3Color": "#000000",
    "s8l1Color": "#FFFFFF",
    "s8l2aColor": "#FFFFFF",
    "s8l2bColor": "#000000",
    "s8l3Color": "#000000",
    "s9l1Color": "#FFFFFF",
    "s9l2aColor": "#FFFFFF",
    "s9l2bColor": "#000000",
    "s9l3Color": "#000000",
    "stripeColor1": "",
    "stripeColor10": "",
    "stripeColor2": "",
    "stripeColor3": "",
    "stripeColor4": "",
    "stripeColor5": "",
    "stripeColor6": "",
    "stripeColor7": "",
    "stripeColor8": "",
    "stripeColor9": "",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
]
`;

exports[`getBeltPropsStriped > should match snap 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#FFFFFF",
      "color2": "#000000",
      "color3": "#00FF00",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 0,
      "maxStripes": 10,
      "minStripes": 0,
      "name": "solid",
      "patchBorderColor": "",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 0,
      "stripeColor": "",
      "stripeCount": 0,
      "stripePosition": "Right",
      "system": "none",
      "type": "Striped",
    },
    "borderColor": "#434244",
    "callback": undefined,
    "elementId": "",
    "hasPatch": true,
    "hasProfessorPatch": false,
    "patchBorder": "",
    "patchColor": "#000000",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1Color": "#FFFFFF",
    "s10l2aColor": "#000000",
    "s10l2bColor": "#000000",
    "s10l3Color": "#00FF00",
    "s11l1Color": "#FFFFFF",
    "s11l2aColor": "#000000",
    "s11l2bColor": "#000000",
    "s11l3Color": "#00FF00",
    "s12l1Color": "#FFFFFF",
    "s12l2aColor": "#000000",
    "s12l2bColor": "#000000",
    "s12l3Color": "#00FF00",
    "s13l1Color": "#FFFFFF",
    "s13l2aColor": "#000000",
    "s13l2bColor": "#000000",
    "s13l3Color": "#00FF00",
    "s1l1Color": "#FFFFFF",
    "s1l2aColor": "#000000",
    "s1l2bColor": "#000000",
    "s1l3Color": "#00FF00",
    "s2l1Color": "#FFFFFF",
    "s2l2aColor": "#000000",
    "s2l2bColor": "#000000",
    "s2l3Color": "#00FF00",
    "s3l1Color": "#FFFFFF",
    "s3l2aColor": "#000000",
    "s3l2bColor": "#000000",
    "s3l3Color": "#00FF00",
    "s4l1Color": "#FFFFFF",
    "s4l2aColor": "#000000",
    "s4l2bColor": "#000000",
    "s4l3Color": "#00FF00",
    "s5l1Color": "#FFFFFF",
    "s5l2aColor": "#000000",
    "s5l2bColor": "#000000",
    "s5l3Color": "#00FF00",
    "s6l1Color": "#FFFFFF",
    "s6l2aColor": "#000000",
    "s6l2bColor": "#000000",
    "s6l3Color": "#00FF00",
    "s7l1Color": "#FFFFFF",
    "s7l2aColor": "#000000",
    "s7l2bColor": "#000000",
    "s7l3Color": "#00FF00",
    "s8l1Color": "#FFFFFF",
    "s8l2aColor": "#000000",
    "s8l2bColor": "#000000",
    "s8l3Color": "#00FF00",
    "s9l1Color": "#FFFFFF",
    "s9l2aColor": "#000000",
    "s9l2bColor": "#000000",
    "s9l3Color": "#00FF00",
    "stripeColor1": "",
    "stripeColor10": "",
    "stripeColor2": "",
    "stripeColor3": "",
    "stripeColor4": "",
    "stripeColor5": "",
    "stripeColor6": "",
    "stripeColor7": "",
    "stripeColor8": "",
    "stripeColor9": "",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
]
`;
